--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Home</title>
 </head>
 <!-- <body style='background-color: #FBFCFC; padding:40px;'> -->
+
 <body>
     <div style="width: 65%; margin: 0 auto;">
         <nav class="breadcrumb is-right has-bullet-separator" aria-label="breadcrumbs">
@@ -38,20 +39,26 @@
                 </li>
             </ul>
         </nav>
-        <h1>
+        <h1 class=blink-text>
             Hi! I'm Areena 👋🏼
         </h1>
 
         <h2 class='subtitle'>
-            I'm pursuing a master's degree in <span style='color: rgb(242, 90, 242); font-weight: bold;'> Data Journalism </span> at <a href='https://journalism.columbia.edu/'><span style='font-weight:bold'>Columbia</a></span>. 
-            I've worked as a publisher for <span style='color: rgb(253, 126, 41); font-weight: bold;'>Reuters'</span> wire service Eikon, as a senior-editor for
-            <strong><span style='color: rgb(239, 60, 60); font-weight: bold;'>Glance</span></strong>, and a local reporter for <strong><span style='color: rgb(38, 133, 12); font-weight: bold;'>Idaho Press</strong></span>.
+            I'm pursuing a master's degree in <span style='color: rgb(242, 90, 242); font-weight: bold;'> Data
+                Journalism </span> at <a href='https://journalism.columbia.edu/'><span
+                    style='font-weight:bold'>Columbia</a></span>.
+            I've worked as a publisher for <span style='color: rgb(253, 126, 41); font-weight: bold;'>Reuters'</span>
+            wire service Eikon, as a senior-editor for
+            <strong><span style='color: rgb(239, 60, 60); font-weight: bold;'>Glance</span></strong>, and a local
+            reporter for <strong><span style='color: rgb(38, 133, 12); font-weight: bold;'>Idaho Press</strong></span>.
             <br> <br>
-            <strong>I write a <a href="https://areena.substack.com" target="_blank"> weekly newsletter </a> on learning how to code, grad school, life in NYC and more!</strong>
-        <div style='display: flex; gap:15px; justify-content: center;'>
-            <iframe src="https://areena.substack.com/embed" width="470" height="170" style="border:0px solid #A569BD; background:FBFCFC;" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <br>
+            <strong>I write a <a href="https://areena.substack.com" target="_blank"> weekly newsletter </a> on learning
+                how to code, grad school, life in NYC and more!</strong>
+            <div style='display: flex; gap:15px; justify-content: center;'>
+                <iframe src="https://areena.substack.com/embed" width="470" height="170"
+                    style="border:0px solid #A569BD; background:FBFCFC;" frameborder="0" scrolling="no"></iframe>
+            </div>
+            <br>
         </h2>
         <div style="display: flex; gap:15px; justify-content: center;">
             <a href='mailto:areena.arora@columbia.edu?Subject=Hello!' target='blank'>
@@ -75,106 +82,128 @@
             <strong>Here's some of my work</strong>
         </h3>
         <h2><strong>Data</strong></h2>
-        <p>
-            <a href='https://github.com/areenaarora/scraping-newsroom-style-guides' target="_blank"> <strong>Comparing
-                    different newsrooms' style-guides </a></strong>
-            <br>
-            <span style='font-family: monospace; font-weight: bold; font-size: 18px;'>
-            Tech stack used: Python[BeautifulSoup and Pandas], Regex, PDFMiner, HTML, Excel</span>
-            <br>
-            Compared how different words are defined by different news organizations to get an insight into their
-            editorial decisions. The news orgs I chose have a wide ranging
-            readership and would be interesting to measure all these five (BBC, BuzzFeed, NPR, Reuters, The Guardian) on the same scale.<strong> December 2021</strong>
-        </p>
+        <br>
+        <div class="columns is-multiline">
+            <p>
+                <div class="column is-one-third">
+                <a href='https://github.com/areenaarora/scraping-newsroom-style-guides' target="_blank">
+                    <strong>Comparing different newsrooms' style-guides </a></strong>
+                <br>
+                <span style='font-family: monospace; font-weight: bold; font-size: 18px;'>
+                    👩🏻‍💻: Python[BeautifulSoup & Pandas], Regex, PDFMiner, HTML, Excel</span>
+                <br>
+                Compared how different words are defined by different news organizations to get an insight into their
+                editorial decisions.<strong> December 2021</strong>
+            </div>
+            </p>
+            <p>
+                <div class="column is-one-third">
+                <a href='https://github.com/areenaarora/areenaarora.com' target="_blank">
+                    <strong> This website!</a></strong>
+                <br>
+                <span style='font-family: monospace; font-weight: bold; font-size: 18px;'>
+                    👩🏻‍💻: <a href='https://bulma.io/' target='_blank'>Bulma</a>, <a href='https://fontawesome.com/' target='_blank'>Font Awesome</a> and <a href='https://freeicons.io/ target='_blank'>Free Icons</a></span>
+                <br>
+                Using this website as my design skills' playground.<strong> December 2021</strong>
+            </div>
+            </p>
+        </div>
         <br>
         <h2> <strong>Reporting</strong></h2>
         <br>
         <h4 style='font-size: large; color: rgb(15, 0, 26);'><strong>Accountability, Investigative & Crime
                 reporting</strong></h3>
-        <br>
-        <p
-            style="color:rgb(0, 42, 0); font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: medium;">
-        <div class="columns is-multiline">
-            <div class="column is-one-third">
-
-                <a href='https://www.idahopress.com/news/local/2cscoop/indian-creek-plaza-over-budget-and-behind-original-construction-schedule/article_729c087a-780c-5202-bacf-34255edb016d.html'
-                    target="_blank"><strong>Indian Creek Plaza — over budget and behind original construction
-                        schedule</a></strong><br>
-                A deep-dive about delays in the city's then biggest project. Also covered budget overage. Extensively
-                used
-                public records, govt officials' memos and coverage from city agencies' meetings. <strong>October
-                    2017</strong>
-
-            </div>
-            <div class="column is-one-third">
-
-                <a href='https://www.idahopress.com/news/local/2cscoop/national-christmas-tree-shortage-drives-up-prices-at-canyon-county-tree-lots/article_1844a843-db04-523e-8db0-17b1d204e7ca.html'
-                    target="_blank"><strong>National Christmas tree shortage drives up prices at Canyon County tree
-                        lots</a></strong><br>
-                Holiday special on why a decade after the recession Christmas tree got hit. <strong>November
-                    2017</strong>
-
-            </div>
-            <div class='column is-one-third'>
-                <a href='https://www.idahopress.com/news/local/2cscoop/at-columbia-high-in-nampa-300-students-walk-out-majority-do-not/article_8b759674-ace6-5b55-adcc-39071b629a11.html'
-                    target="_blank"> <strong>Culvert concerns: Culvert report reveals 11 other structures in deficient
-                        condition</a><br> </strong>Data-driven story on city's inaction on damaging culverts. Also
-                inspected
-                inter-agency jurisdiction issues. <strong>December 2017</strong>
-            </div>
-            <div class="column is-one-third">
-                <a href='https://www.idahopress.com/news/local/2cscoop/prosecutor-retired-boise-priest-found-with-child-porn-drugs/article_403079a5-4491-57f3-8a9e-9e91e3de8651.html'
-                    target="_blank"><strong>Prosecutor: Retired Boise priest found with child porn,
-                        drugs</a></strong><br>
-                Court reporting. <strong>February 2018</strong>
-            </div>
-            <div class='column is-one-third'>
-                <a href='https://www.idahopress.com/news/local/2cscoop/at-columbia-high-in-nampa-300-students-walk-out-majority-do-not/article_8b759674-ace6-5b55-adcc-39071b629a11.html'
-                    target="_blank"> <strong>At Columbia High in Nampa, 300 students walk out, majority do not</a><br>
-                </strong>Part of the paper's series of local schools' coverage on the day of anti-gun walkouts following
-                the
-                2018 Parkland
-                shooting. <strong>March 2018</strong>
-            </div>
-            <div class="column is-one-third">
-
-                <a href='https://www.idahopress.com/news/local/2cscoop/new-pallet-service-center-to-open-in-caldwell/article_e67a76b4-c8e6-5196-ad5b-73c5cc82f7ac.html'
-                    target="_blank"><strong>Then and now: What Caldwell's foreign trade zone has done for the
-                        area</a></strong><br>
-                Local government accountability reporting. <strong>April 2018</strong>
-            </div>
-            </p>
-        </div>
-        <br>
-
-        <h4 style='font-size: large; color: rgb(15, 0, 26);'><strong>Feature reporting</strong></h3>
-        <br>
-        <div class="columns is-multiline">
+            <br>
             <p
                 style="color:rgb(0, 42, 0); font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: medium;">
-            <div class="column is-one-third">
-                <a href='https://apnews.com/article/10ab9cb7a5e24bdd86337d36a48c539b' target="_blank"><strong>As housing
-                        inventory shrinks, people look to living in RVs</a></strong><br>
-                Special report about Idaho residents choosing to live in RVs full-time owing to sky-rocketing housing
-                prices. <br><strong>April 2018</strong>
+            <div class="columns is-multiline">
+                <div class="column is-one-third">
+
+                    <a href='https://www.idahopress.com/news/local/2cscoop/indian-creek-plaza-over-budget-and-behind-original-construction-schedule/article_729c087a-780c-5202-bacf-34255edb016d.html'
+                        target="_blank"><strong>Indian Creek Plaza — over budget and behind original construction
+                            schedule</a></strong><br>
+                    A deep-dive about delays in the city's then biggest project. Also covered budget overage.
+                    Extensively
+                    used
+                    public records, govt officials' memos and coverage from city agencies' meetings. <strong>October
+                        2017</strong>
+
+                </div>
+                <div class="column is-one-third">
+
+                    <a href='https://www.idahopress.com/news/local/2cscoop/national-christmas-tree-shortage-drives-up-prices-at-canyon-county-tree-lots/article_1844a843-db04-523e-8db0-17b1d204e7ca.html'
+                        target="_blank"><strong>National Christmas tree shortage drives up prices at Canyon County tree
+                            lots</a></strong><br>
+                    Holiday special on why a decade after the recession Christmas tree got hit. <strong>November
+                        2017</strong>
+
+                </div>
+                <div class='column is-one-third'>
+                    <a href='https://www.idahopress.com/news/local/2cscoop/at-columbia-high-in-nampa-300-students-walk-out-majority-do-not/article_8b759674-ace6-5b55-adcc-39071b629a11.html'
+                        target="_blank"> <strong>Culvert concerns: Culvert report reveals 11 other structures in
+                            deficient
+                            condition</a><br> </strong>Data-driven story on city's inaction on damaging culverts. Also
+                    inspected
+                    inter-agency jurisdiction issues. <strong>December 2017</strong>
+                </div>
+                <div class="column is-one-third">
+                    <a href='https://www.idahopress.com/news/local/2cscoop/prosecutor-retired-boise-priest-found-with-child-porn-drugs/article_403079a5-4491-57f3-8a9e-9e91e3de8651.html'
+                        target="_blank"><strong>Prosecutor: Retired Boise priest found with child porn,
+                            drugs</a></strong><br>
+                    Court reporting. <strong>February 2018</strong>
+                </div>
+                <div class='column is-one-third'>
+                    <a href='https://www.idahopress.com/news/local/2cscoop/at-columbia-high-in-nampa-300-students-walk-out-majority-do-not/article_8b759674-ace6-5b55-adcc-39071b629a11.html'
+                        target="_blank"> <strong>At Columbia High in Nampa, 300 students walk out, majority do
+                            not</a><br>
+                    </strong>Part of the paper's series of local schools' coverage on the day of anti-gun walkouts
+                    following
+                    the
+                    2018 Parkland
+                    shooting. <strong>March 2018</strong>
+                </div>
+                <div class="column is-one-third">
+
+                    <a href='https://www.idahopress.com/news/local/2cscoop/new-pallet-service-center-to-open-in-caldwell/article_e67a76b4-c8e6-5196-ad5b-73c5cc82f7ac.html'
+                        target="_blank"><strong>Then and now: What Caldwell's foreign trade zone has done for the
+                            area</a></strong><br>
+                    Local government accountability reporting. <strong>April 2018</strong>
+                </div>
+                </p>
             </div>
             <br>
-            <div class="column is-one-third">
-                <a href='https://www.idahopress.com/news/local/2cscoop/in-the-midst-of-an-immigration-stir-up-one-local-teen-is-ready-to-fight/article_97bde17b-604a-55e0-9dcf-bc946b688916.html'
-                    target="_blank"><strong>In the midst of an immigration stir up, one local teen is ready to
-                        fight</a></strong><br>
-                <strong>September 2017</strong>
-            </div>
-            <br>
-            <div class="column is-one-third">
-                <a href='https://www.idahopress.com/news/local/2cscoop/middleton-samaritan-hopes-to-see-again/article_40cb2683-c384-5b7b-a5fb-0e044968a52e.html'
-                    target="_blank"><strong>Middleton Samaritan hopes to see again</a></strong><br>
-                Human-interest story on a samaritan's fundraising efforts. <strong>November 2017</strong>
-            </div>
-        </div>
-        <br>
-        <p style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ; color:#704868; font-size: 1 em; font-weight: bolder; text-align: center;">
-        Made with 💟 and chai
-        </p>
+
+            <h4 style='font-size: large; color: rgb(15, 0, 26);'><strong>Feature reporting</strong></h3>
+                <br>
+                <div class="columns is-multiline">
+                    <p
+                        style="color:rgb(0, 42, 0); font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: medium;">
+                    <div class="column is-one-third">
+                        <a href='https://apnews.com/article/10ab9cb7a5e24bdd86337d36a48c539b' target="_blank"><strong>As
+                                housing
+                                inventory shrinks, people look to living in RVs</a></strong><br>
+                        Special report about Idaho residents choosing to live in RVs full-time owing to sky-rocketing
+                        housing
+                        prices. <br><strong>April 2018</strong>
+                    </div>
+                    <br>
+                    <div class="column is-one-third">
+                        <a href='https://www.idahopress.com/news/local/2cscoop/in-the-midst-of-an-immigration-stir-up-one-local-teen-is-ready-to-fight/article_97bde17b-604a-55e0-9dcf-bc946b688916.html'
+                            target="_blank"><strong>In the midst of an immigration stir up, one local teen is ready to
+                                fight</a></strong><br>
+                        <strong>September 2017</strong>
+                    </div>
+                    <br>
+                    <div class="column is-one-third">
+                        <a href='https://www.idahopress.com/news/local/2cscoop/middleton-samaritan-hopes-to-see-again/article_40cb2683-c384-5b7b-a5fb-0e044968a52e.html'
+                            target="_blank"><strong>Middleton Samaritan hopes to see again</a></strong><br>
+                        Human-interest story on a samaritan's fundraising efforts. <strong>November 2017</strong>
+                    </div>
+                </div>
+                <br>
+                <p
+                    style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ; color:#704868; font-size: 1 em; font-weight: bolder; text-align: center;">
+                    Made with 💟 and chai
+                </p>
     </div>
 </body>
