Minor color changes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </h1>
 <br>
         <h2 class='subtitle'>
-            I'm pursuing a master's degree in <span style='color: rgb(242, 90, 242); font-weight: bold;'> Data
+            I'm pursuing a master's degree in <span style='color: rgb(96, 4, 142); font-weight: bold;'> Data
                 Journalism </span> at <a href='https://journalism.columbia.edu/'><span
                     style='font-weight:bold'>Columbia</a></span>.
             I've worked as a publisher for <span style='color: rgb(253, 126, 41); font-weight: bold;'>Reuters'</span>
@@ -54,7 +54,7 @@
                 how to code, grad school, life in NYC and more!</strong>
             <div style='display: flex; gap:15px; justify-content: center;'>
                 <iframe src="https://areena.substack.com/embed" width="470" height="170"
-                    style="border:0px solid #A569BD; background:FBFCFC;" frameborder="0" scrolling="no"></iframe>
+                    style="border:0px solid; background:FBFCFC;" frameborder="0" scrolling="no"></iframe>
             </div>
             <br>
         </h2>
