--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 how to code, grad school, life in NYC and more!</strong>
             <div style='display: flex; gap:15px; justify-content: center;'>
                 <iframe src="https://areena.substack.com/embed" width="470" height="170"
-                    style="border:0px solid; background:FBFCFC;" frameborder="0" scrolling="no"></iframe>
+                    style="border:0px solid #A569BD; background:#FBFCFC;" frameborder="0" scrolling="no"></iframe>
             </div>
             <br>
         </h2>
