Updated data to programming subtitle

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h3 class="title is-3 has-text-centered is-family-secondary">
             <strong>Here's some of my work</strong>
         </h3>
-        <h2><strong>Data</strong></h2>
+        <h2><strong>Programming</strong></h2>
         <br>
         <div class="columns is-multiline">
             <p>
