Added tags to index page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <br>
         <h2 class='subtitle'>
             I'm pursuing a master's degree in <span style='color: rgb(96, 4, 142); font-weight: bold;'> Data
-                Journalism </span> at <a href='https://journalism.columbia.edu/'><span
+                Journalism </span> at <a href='https://journalism.columbia.edu/' target='_blank'><span
                     style='font-weight:bold'>Columbia</a></span>.
             I've worked as a publisher for <span style='color: rgb(253, 126, 41); font-weight: bold;'>Reuters'</span>
             wire service Eikon, as a senior-editor for
@@ -81,17 +81,15 @@
         </h3>
         <h2><strong>Programming</strong></h2>
         <br>
-        <div class="columns is-multiline">
+        <div class="columns is-4">
             <p>
                 <div class="column is-one-third">
                 <a href='https://github.com/areenaarora/scraping-newsroom-style-guides' target="_blank">
                     <strong>Comparing different newsrooms' style-guides </a></strong>
                 <br>
-                <span style='font-family: monospace; font-weight: bold; font-size: 18px;'>
-                    👩🏻‍💻: Python[BeautifulSoup & Pandas], Regex, PDFMiner, HTML, Excel</span>
+                    👩🏻‍💻: <span class="tag is-success">Python</span> <span class="tag is-success">Regex</span> <span class="tag is-success">PDF Miner</span>
                 <br>
-                Compared how different words are defined by different news organizations to get an insight into their
-                editorial decisions.<strong> December 2021</strong>
+                Compared how different words are defined by different news organizations to get an insight into their editorial decisions.<strong> December 2021</strong>
             </div>
             </p>
             <p>
@@ -99,8 +97,7 @@
                 <a href='https://github.com/areenaarora/areenaarora.com' target="_blank">
                     <strong> This website!</a></strong>
                 <br>
-                <span style='font-family: monospace; font-weight: bold; font-size: 18px;'>
-                    👩🏻‍💻: <a href='https://bulma.io/' target='_blank'>Bulma</a>, <a href='https://fontawesome.com/' target='_blank'>Font Awesome</a> and <a href='https://freeicons.io/ target='_blank'>Free Icons</a></span>
+                    👩🏻‍💻: <a href='https://bulma.io/' target='_blank'><span class="tag is-success">Bulma</span></a> <a href='https://fontawesome.com/' target='_blank'><span class="tag is-success">Font Awesome</span></a> <a href='https://freeicons.io/ target='_blank'> <span class="tag is-success">Free Icons</span></a>
                 <br>
                 Using this website as my design skills' playground.<strong> December 2021</strong>
             </div>
@@ -114,6 +111,7 @@
             <br>
             <p
                 style="color:rgb(0, 42, 0); font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: medium;">
+                
             <div class="columns is-multiline">
                 <div class="column is-one-third">
 
@@ -142,7 +140,7 @@
                             deficient
                             condition</a><br> </strong>Data-driven story on city's inaction on damaging culverts. Also
                     inspected
-                    inter-agency jurisdiction issues. <strong>December 2017</strong>
+                    inter-agency jurisdiction issues. <br><strong>December 2017</strong>
                 </div>
                 <div class="column is-one-third">
                     <a href='https://www.idahopress.com/news/local/2cscoop/prosecutor-retired-boise-priest-found-with-child-porn-drugs/article_403079a5-4491-57f3-8a9e-9e91e3de8651.html'
