--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="icon" href="icon.png">
+    <link rel="stylesheet" href="resume-stylesheet.css">
     <title>Resume</title>
 </head>
 
