--- a/resume.html
+++ b/resume.html
@@ -44,11 +44,20 @@
                 </li>
             </ul>
         </nav>
-        <h2 style="font-size:x-large; text-align: center;"> <strong>Experience</strong></h2>
-        <br><br>
+        <br>
+        <p style="font-size: 18px; color: black;">
+            I'm a journalist, a data-nerd and a newbie plant mom. I write a weekly newsletter, work part-time and I'm pursuing a degree in Data Journalism from Columbia. I love cooking — I mean — <i>make my own cheese, bread, all three-meals </i>... you get the idea. I'm a 2017 graduate of <a href="https://www.owu.edu/" target="_blank"><span style="color:rgb(179, 11, 11)">Ohio Wesleyan University</span></a> where I majored in journalism. Since graduating, I've worked as a local reporter in Idaho, in India as a publishing specialist for Reuters and as a senior-editor for a media start-up. I'm <bold>always</bold> up for good conversations over a cup of ✨<span class='blink-text'>chai!</span>✨
+            <br>
+            <br>
+            Here's my detailed resume ⬇️. A PDF-version is also available for downloading.
+        </p>
+        <br>
+        <h2 style="font-size: 20px; text-align: center;"> <strong>Experience</strong></h2>
+        <br>
         <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(72, 0, 255); font-weight: bold;'>InMobi Glance Bengaluru, India</p>
-        <p class='subtitle'>Senior Sub-Editor Dec 2019 - July 2020</p>
-        <p>I curated and presented stories in a visually attractive manner. I was at the forefront of the product’s expansion in the U.S., helping co-lead a team of global editors. I handled breaking stories, live events and collaborated with creatives to present news to 100 million+ active users in the most visually appealing way possible. Recognized with a 'Real Star' award for my news-judgement and willingness to initiate and lead projects.
+        <p><span style="font-weight:bold">Senior Sub-Editor Dec 2019 - July 2020</span>
+        <br>
+        I curated and presented stories in a visually attractive manner. I was at the forefront of the product’s expansion in the U.S., helping co-lead a team of global editors. I handled breaking stories, live events and collaborated with creatives to present news to 100 million+ active users in the most visually appealing way possible. Recognized with a 'Real Star' award for my news-judgement and willingness to initiate and lead projects.
         </p>
         <br><br>
         <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(72, 0, 255); font-weight: bold;'>Reuters Bengaluru, India</p>
@@ -65,8 +74,8 @@
         <br>
         <br>
         <br>
-        <h2 style="font-size:x-large; text-align: center;"> <strong>Education</strong></h2>
-        <br><br>
+        <h2 style="font-size: 20px; text-align: center;"> <strong>Education</strong></h2>
+        <br>
         <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(72, 0, 255); font-weight: bold;'>Columbia University, Graduate School of Journalism Master of Science Data Journalism candidate</p>
         <p class='subtitle'>Expected graduation: August 2022 - July 2020</p>
         <p>Interested in exploring the impact of climate change on infrastructure. Earned honors in Media Ethics class.</p>
