--- a/resume.html
+++ b/resume.html
@@ -13,12 +13,12 @@
         <nav class="breadcrumb is-right has-bullet-separator" aria-label="breadcrumbs">
             <ul>
                 <li>
-                    <a href="https://areenaarora.com/Resume-AreenaArora">
+                    <!-- <a href="https://areenaarora.com/Resume-AreenaArora">
                         <span class="icon is-small">
                             <i class="fas fa-download" aria-hidden="true"></i>
                         </span>
                         <span>Download resume</span>
-                    </a>
+                    </a> -->
                     <a href="https://areenaarora.com">
                         <span class="icon is-small">
                             <i class="fas fa-home" aria-hidden="true"></i>
@@ -46,42 +46,50 @@
         </nav>
         <br>
         <p style="font-size: 18px; color: black;">
-            I'm a journalist, a data-nerd and a newbie plant mom. I write a weekly newsletter, work part-time and I'm pursuing a degree in Data Journalism from Columbia. I love cooking — I mean — <i>make my own cheese, bread, all three-meals </i>... you get the idea. I'm a 2017 graduate of <a href="https://www.owu.edu/" target="_blank"><span style="color:rgb(179, 11, 11)">Ohio Wesleyan University</span></a> where I majored in journalism. Since graduating, I've worked as a local reporter in Idaho, in India as a publishing specialist for Reuters and as a senior-editor for a media start-up. I'm <bold>always</bold> up for good conversations over a cup of ✨<span class='blink-text'>chai!</span>✨
+            I'm a journalist, a data-nerd and a newbie plant mom. I write a weekly newsletter, work part-time and I'm pursuing a degree in Data Journalism from Columbia. I love cooking — I mean — <i>make my own cheese, bread, all three-meals </i>... you get the idea. I'm a 2017 graduate of <a href="https://www.owu.edu/" target="_blank"><span style="color:rgb(179, 11, 11)">Ohio Wesleyan University</span></a> where I majored in journalism. I'm <b>always</b> up for good conversations over a cup of ✨<span class='blink-text'>chai!</span>✨</p>
             <br>
+            <p><span style="font-weight: bold">Languages:</span>
+            Hindi, Punjabi</p>
+            <p><span style="font-weight: bold">Programming skills:</span>
+            Python, Regex, CSS</p>
             <br>
-            Here's my detailed resume ⬇️. A PDF-version is also available for downloading.
-        </p>
+        <!-- <p>Here's my detailed resume ⬇️. A PDF-version is also available for downloading.</p> -->
+        
         <br>
         <h2 style="font-size: 20px; text-align: center;"> <strong>Experience</strong></h2>
-        <br>
-        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(72, 0, 255); font-weight: bold;'>InMobi Glance Bengaluru, India</p>
-        <p><span style="font-weight:bold">Senior Sub-Editor Dec 2019 - July 2020</span>
-        <br>
-        I curated and presented stories in a visually attractive manner. I was at the forefront of the product’s expansion in the U.S., helping co-lead a team of global editors. I handled breaking stories, live events and collaborated with creatives to present news to 100 million+ active users in the most visually appealing way possible. Recognized with a 'Real Star' award for my news-judgement and willingness to initiate and lead projects.
+        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(73, 46, 140); font-weight: bold;'>InMobi Glance</p>
+        <p>📍Bengaluru, India</p>
+        <p><span style="font-weight:bold">Senior Sub-Editor</span><span style="float: right; color:black">Dec 2019 - July 2020</span></p>
+        <p>I curated and presented stories in a visually attractive manner. I was at the forefront of the product’s expansion in the U.S., helping co-lead a team of global editors. I handled breaking stories, live events and collaborated with creatives to present news to 100 million+ active users in the most visually appealing way possible. Recognized with a 'Real Star' award for my news-judgement and willingness to initiate and lead projects.
         </p>
-        <br><br>
-        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(72, 0, 255); font-weight: bold;'>Reuters Bengaluru, India</p>
-        <p class='subtitle'>News Publishing Specialist Jul 2018 - Dec 2019</p>
+        <br>
+        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(73, 46, 140); font-weight: bold;'>Reuters</p>
+        <p>📍Bengaluru, India</p>
+        <p><span style="font-weight:bold">News Publishing Specialist</span><span style="float: right; color:black"">Jul 2018 - Dec 2019</span></p>
         <p>I curated and packaged financial and political news on Reuters’ Eikon platform. The role required a strong general and markets' news judgment. I also designed and compiled newsletters on Brexit, Debt, and Forex Markets.</p>
-        <br><br>
-        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(72, 0, 255); font-weight: bold;'>Idaho Press Nampa, ID</p>
-        <p class='subtitle'>Reporter June 2017 - April 2018</p>
+        <br>
+        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(73, 46, 140); font-weight: bold;'>Idaho Press</p>
+        <p>📍Nampa, Idaho</p>
+        <p><span style="font-weight:bold">Reporter</span><span style="float: right; color:black"">June 2017 - April 2018</span>
         <p> I covered city hall and businesses in the city of Caldwell. My reporting was sourced by filing requests for public records and using that data to tell stories. I also produced long form story packages and covered breaking news, as needed.</p>
-        <br><br>
-        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(72, 0, 255); font-weight: bold;'>The Transcript Delaware, OH (student newspaper)</p>
-        <p class='subtitle'>Managing Editor Jan 2016 - Dec 2016</p>
-        <p> I covered faculty meetings, student government, general campus news, and (occasionally) sports as the Managing Editor for one of the oldest running independent student newspaper in the country, The Transcript. I was also responsible for designing pages for our biweekly print publication, taking photographs, assigning and editing stories and was charged with leading an investigative reporting project.</p>
+        <br>
+        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(73, 46, 140); font-weight: bold;'>The Transcript (student newspaper)</p>
+        <p>📍Delaware, Ohio</p>
+        <p><span style="font-weight:bold">Managing Editor</span><span style="float: right; color:black"">Jan 2016 - Dec 2016</span></p>
+        <p> I covered faculty meetings, student government, general campus news, and (occasionally) sports as the Managing Editor for one of the oldest running independent student newspapers in the country. I was also responsible for designing pages for our biweekly print publication, taking photographs, assigning and editing stories and lead an investigative reporting project.</p>
         <br>
         <br>
         <br>
         <h2 style="font-size: 20px; text-align: center;"> <strong>Education</strong></h2>
         <br>
-        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(72, 0, 255); font-weight: bold;'>Columbia University, Graduate School of Journalism Master of Science Data Journalism candidate</p>
-        <p class='subtitle'>Expected graduation: August 2022 - July 2020</p>
-        <p>Interested in exploring the impact of climate change on infrastructure. Earned honors in Media Ethics class.</p>
-        <br><br>
-        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(72, 0, 255); font-weight: bold;'>Ohio Wesleyan University, Bachelor of Arts</p>
-        <p class='subtitle'>2017</p>
-        <p>Majored in journalism and graduated one year early. Led multiple student organizations including international students’ association.</p>
+        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(73, 46, 140); font-weight: bold;'>Columbia University, Graduate School of Journalism</p>
+        <p> <span style="font-weight: bold">Master of Science Data Journalism candidate</span><span style='font-size: 16px; float: right;'>Expected graduation: August 2022</span></p>
+        
+        <p>Interested in exploring the impact of climate change on infrastructure. Earned honors in Media Ethics class.
+        </p>
+        <br>
+        <p style='font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(73, 46, 140); font-weight: bold;'>Ohio Wesleyan University, Bachelor of Arts</p>
+        <p> <span style="font-weight: bold">Bachelor of Arts</span><span style='font-size: 16px; float: right;'>Class of 2017</span></p>
+        <p>Majored in journalism and graduated one year early.</p>
     </div>
 </body>
