--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="stylesheet.css">
     <title>Home</title>
 </head>
-<body>
+
+<body style='background-color: #FBFCFC; padding:40px;'>
     <div style="width: 65%; margin: 0 auto;">
         <nav class="breadcrumb is-right has-bullet-separator" aria-label="breadcrumbs">
             <ul>
