--- a/resume.html
+++ b/resume.html
@@ -46,7 +46,7 @@
         </nav>
         <br>
         <p style="font-size: 18px; color: black;">
-            I'm a journalist, a data-nerd and a newbie plant mom. I write a weekly newsletter, work part-time and I'm pursuing a degree in Data Journalism from Columbia. I love cooking — I mean — <i>make my own cheese, bread, all three-meals </i>... you get the idea. I'm a 2017 graduate of <a href="https://www.owu.edu/" target="_blank"><span style="color:rgb(179, 11, 11)">Ohio Wesleyan University</span></a> where I majored in journalism. I'm <b>always</b> up for good conversations over a cup of ✨<span class='blink-text'>chai!</span>✨</p>
+            I'm a journalist, a data-nerd and a newbie plant mom. I write a weekly newsletter, work part-time and I'm pursuing a degree in Data Journalism from Columbia. I love cooking — I mean — <i>make my own cheese, bread, all three-meals </i>... you get the idea. I'm a 2017 graduate of <a href="https://www.owu.edu/" target="_blank"><span style="color:rgb(179, 11, 11)">Ohio Wesleyan University</span></a> where I majored in journalism. And, I'm <b>always</b> up for good conversations over a cup of ✨<span class='blink-text'>chai!</span>✨</p>
             <br>
             <p><span style="font-weight: bold">Languages:</span>
             Hindi, Punjabi</p>
