--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,7 @@
             <p><span style="font-weight: bold">Languages:</span>
             Hindi, Punjabi</p>
             <p><span style="font-weight: bold">Programming skills:</span>
-            Python, Regex, CSS</p>
+            Python [Pandas, Beautiful Soup, Selenium], Regex, CSS</p>
             <br>
         <!-- <p>Here's my detailed resume ⬇️. A PDF-version is also available for downloading.</p> -->
         
