--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://areenaarora.com/resume">
+                    <a href="https://areenaarora.com/Curries🌶">
                         <span class="icon is-small">
                             <i class="fas fa-pepper-hot" aria-hidden="true"></i>
                         </span>
