--- a/curries.html
+++ b/curries.html
@@ -7,3 +7,6 @@
     <link rel="stylesheet" href="stylesheet.css">
     <title>Curries🌶</title>
 </head>
+<body>
+ Have you wndered if there's a way to learn how to cook? Forget recipes (for just a bit), I'm excited to show you how to treat yourself to gourmet food using your instinct!
+</body>
