Updating curries' page

--- a/curries.html
+++ b/curries.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="stylesheet.css">
     <title>Curries🌶</title>
 </head>
-<body>
- Have you wndered if there's a way to learn how to cook? Forget recipes (for just a bit), I'm excited to show you how to treat yourself to gourmet food using your instinct!
+<body style='background-color: #FBFCFC; padding:40px;'>
+ Have you wondered if there's a way to learn how to cook? Forget recipes (for just a bit), I'm excited to show you how to treat yourself to gourmet food using your instinct!
+
+ Oh cheese, did I just try too hard and sound like a wannabe insurance salesperson? Not the intention!
+
+ I'll restart.
 </body>
