--- a/curries.html
+++ b/curries.html
@@ -7,10 +7,45 @@
     <link rel="stylesheet" href="stylesheet.css">
     <title>Curries🌶</title>
 </head>
+
 <body style='background-color: #FBFCFC; padding:40px;'>
- Have you wondered if there's a way to learn how to cook? Forget recipes (for just a bit), I'm excited to show you how to treat yourself to gourmet food using your instinct!
+    <div style="width: 65%; margin: 0 auto;">
+        <nav class="breadcrumb is-right has-bullet-separator" aria-label="breadcrumbs">
+            <ul>
+                <li>
+                    <a href="https://areenaarora.com">
+                        <span class="icon is-small;">
+                            <i class="fas fa-home" aria-hidden="true"></i>
+                        </span>
+                        <span>Home</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://areenaarora.com/resume">
+                        <span class="icon is-small has-text-black">
+                            <i class="fas fa-book" aria-hidden="true"></i>
+                        </span>
+                        <span style="color:black">Resume</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://areenaarora.com/Curries">
+                        <span class="icon is-small has-text-danger">
+                            <i class="fas fa-pepper-hot" aria-hidden="true"></i>
+                        </span>
+                        <span style="color: red;">Curries</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <h2 span style="font-size: 35px;"> Have you wondered how to cook 🥘 without having to look up instructions 📝 all the time? </h2>
+        <br>
+        <br>
+        <p span style="font-size: 20px; color: black;">Forget recipes (for just a bit), I'm excited to show you how to treat yourself to gourmet food using your instinct!</p>
+        <br>
+        <p>
+        Oh cheese, did I just try too hard and sound like a wannabe insurance salesperson? Not the intention!</p>
 
- Oh cheese, did I just try too hard and sound like a wannabe insurance salesperson? Not the intention!
-
- I'll restart.
+        I'll restart.
+    </div>
 </body>
