--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
                 </li>
                 <li>
                     <a href="https://areenaarora.com/resume">
-                        <span class="icon is-small">
+                        <span class="icon is-small has-text-black">
                             <i class="fas fa-book" aria-hidden="true"></i>
                         </span>
-                        <span>Resume</span>
+                        <span style="color:black">Resume</span>
                     </a>
                 </li>
                 <li>
                     <a href="https://areenaarora.com/Curries">
-                        <span class="icon is-small">
-                            <i class="fas fa-pepper-hot" aria-hidden="true"></i>
+                        <span class="icon is-small has-text-danger">
+                        <i class="fas fa-pepper-hot" aria-hidden="true"></i>
                         </span>
-                        <span>Curries</span>
+                        <span style="color: red;">Curries</span>
                     </a>
                 </li>
             </ul>
