--- a/resume.html
+++ b/resume.html
@@ -13,14 +13,8 @@
         <nav class="breadcrumb is-right has-bullet-separator" aria-label="breadcrumbs">
             <ul>
                 <li>
-                    <!-- <a href="https://areenaarora.com/Resume-AreenaArora">
-                        <span class="icon is-small">
-                            <i class="fas fa-download" aria-hidden="true"></i>
-                        </span>
-                        <span>Download resume</span>
-                    </a> -->
                     <a href="https://areenaarora.com">
-                        <span class="icon is-small">
+                        <span class="icon is-small;">
                             <i class="fas fa-home" aria-hidden="true"></i>
                         </span>
                         <span>Home</span>
@@ -28,18 +22,18 @@
                 </li>
                 <li>
                     <a href="https://areenaarora.com/resume">
-                        <span class="icon is-small">
+                        <span class="icon is-small has-text-black">
                             <i class="fas fa-book" aria-hidden="true"></i>
                         </span>
-                        <span>Resume</span>
+                        <span style="color:black">Resume</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <span class="icon is-small">
-                            <i class="fas fa-pepper-hot" aria-hidden="true"></i>
+                    <a href="https://areenaarora.com/Curries">
+                        <span class="icon is-small has-text-danger">
+                        <i class="fas fa-pepper-hot" aria-hidden="true"></i>
                         </span>
-                        <span>Curries</span>
+                        <span style="color: red;">Curries</span>
                     </a>
                 </li>
             </ul>
