Updated index and curries

--- a/curries.html
+++ b/curries.html
@@ -43,9 +43,8 @@
         <br>
         <p span style="font-size: 20px; color: black;">Forget recipes (for just a bit), I'm excited to show you how to treat yourself to gourmet food using your instinct!</p>
         <br>
-        <p>
-        Oh cheese, did I just try too hard and sound like a wannabe insurance salesperson? Not the intention!</p>
-
-        I'll restart.
+        <p span style="font-size: 20px">
+        Oh cheese, did I just try too hard and sound like a wannabe insurance salesperson? Not the intention!
+        I'll restart.</p>
     </div>
 </body>
