--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </p>
         </div>
         <br>
-        <h2> <strong>Reporting</strong></h2>
+        <h2> <strong>Reporting & Writing</strong></h2>
         <br>
         <h4 style='font-size: large; color: rgb(15, 0, 26);'><strong>Accountability, Investigative & Crime
                 reporting</strong></h3>
@@ -140,8 +140,7 @@
                         target="_blank"> <strong>Culvert concerns: Culvert report reveals 11 other structures in
                             deficient
                             condition</a><br> </strong>Data-driven story on city's inaction on damaging culverts. Also
-                    inspected
-                    inter-agency jurisdiction issues. <br><strong>December 2017</strong>
+                    inspected inter-agency jurisdiction issues. <br><strong>December 2017</strong>
                 </div>
                 <div class="column is-one-third">
                     <a href='https://www.idahopress.com/news/local/2cscoop/prosecutor-retired-boise-priest-found-with-child-porn-drugs/article_403079a5-4491-57f3-8a9e-9e91e3de8651.html'
@@ -154,10 +153,7 @@
                         target="_blank"> <strong>At Columbia High in Nampa, 300 students walk out, majority do
                             not</a><br>
                     </strong>Part of the paper's series of local schools' coverage on the day of anti-gun walkouts
-                    following
-                    the
-                    2018 Parkland
-                    shooting. <strong>March 2018</strong>
+                    following the 2018 Parkland shooting. <strong>March 2018</strong>
                 </div>
                 <div class="column is-one-third">
 
@@ -170,7 +166,7 @@
             </div>
             <br>
 
-            <h4 style='font-size: large; color: rgb(15, 0, 26);'><strong>Feature reporting</strong></h3>
+            <h4 style='font-size: large; color: rgb(15, 0, 26);'><strong>Feature writing</strong></h3>
                 <br>
                 <div class="columns is-multiline">
                     <p
