--- a/curries.html
+++ b/curries.html
@@ -4,7 +4,7 @@
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="icon" href="icon.png">
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="curries_stylesheet.css">
     <title>Curries🌶</title>
 </head>
 
@@ -38,13 +38,84 @@
                 </li>
             </ul>
         </nav>
-        <h2 span style="font-size: 35px;"> Have you wondered how to cook 🥘 without having to look up instructions 📝 all the time? </h2>
+        <!-- <h2 span style="font-size: 35px;"> Have you wondered how to cook 🥘 without having to look up instructions 📝 all the time? </h2>
         <br>
         <br>
         <p span style="font-size: 20px; color: black;">Forget recipes (for just a bit), I'm excited to show you how to treat yourself to gourmet food using your instinct!</p>
         <br>
         <p span style="font-size: 20px">
         Oh cheese, did I just try too hard and sound like a wannabe insurance salesperson? Not the intention!
-        I'll restart.</p>
+        I'll restart.</p> -->
     </div>
-</body>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <header>
+        <h1>Chicken Keema</h1>
+      </header>
+      <div class="band">
+        <div class="item-1">
+          <a href="https://design.tutsplus.com/articles/international-artist-feature-malaysia--cms-26852" class="card">
+            <div class="thumb" style="background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/flex-1.jpg);"></div>
+            <article>
+              <h1>International Artist Feature: Malaysia</h1>
+              <span>Mary Winkler</span>
+            </article>
+          </a>
+        </div>
+        <div class="item-2">
+          <a href="https://webdesign.tutsplus.com/articles/how-to-conduct-remote-usability-testing--cms-27045" class="card">
+            <div class="thumb" style="background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/users-2.png);"></div>
+            <article>
+              <h1>How to Conduct Remote Usability Testing</h1>
+              <span>Harry Brignull</span>
+            </article>
+          </a>
+        </div>
+        <div class="item-3">
+          <a href="https://design.tutsplus.com/articles/envato-tuts-community-challenge-created-by-you-july-edition--cms-26724" class="card">
+            <div class="thumb" style="background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/flex-5.jpg);"></div>
+            <article>
+              <h1>Created by You, July Edition</h1>
+              <p>Welcome to our monthly feature of fantastic tutorial results created by you, the Envato Tuts+ community! </p>
+              <span>Melody Nieves</span>
+            </article>
+          </a>
+        </div>
+        <div class="item-4">
+          <a href="https://webdesign.tutsplus.com/tutorials/how-to-code-a-scrolling-alien-lander-website--cms-26826" class="card">
+            <div class="thumb" style="background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/landing.png);"></div>
+            <article>
+              <h1>How to Code a Scrolling “Alien Lander” Website</h1>
+              <p>We’ll be putting things together so that as you scroll down from the top of the page you’ll see an “Alien Lander” making its way to touch down.</p>
+              <span>Kezz Bracey</span>
+            </article>
+          </a>
+        </div>
+        <div class="item-5">
+          <a href="https://design.tutsplus.com/tutorials/stranger-things-inspired-text-effect--cms-27139" class="card">
+            <div class="thumb" style="background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/strange.jpg);"></div>
+            <article>
+              <h1>How to Create a “Stranger Things” Text Effect in Adobe Photoshop</h1>
+              <span>Rose</span>
+            </article>
+          </a>
+        </div>
+        <div class="item-6">
+          <a href="https://photography.tutsplus.com/articles/5-inspirational-business-portraits-and-how-to-make-your-own--cms-27338" class="card">
+            <div class="thumb" style="background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/flor.jpg);"></div>
+            <article>
+              <h1>5 Inspirational Business Portraits and How to Make Your Own</h1>
+      
+              <span>Marie Gardiner</span>
+            </article>
+          </a>
+        </div>
+        <div class="item-7">
+          <a href="https://webdesign.tutsplus.com/articles/notes-from-behind-the-firewall-the-state-of-web-design-in-china--cms-22281" class="card">
+            <div class="thumb" style="background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/china.png);"></div>
+            <article>
+              <h1>Notes From Behind the Firewall: The State of Web Design in China</h1>
+              <span>Kendra Schaefer</span>
+            </article>
+          </a>
+        </div>
+      </div>
