adding dark mode

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body style='background-color: #FBFCFC; padding:40px;'>
     <div style="width: 65%; margin: 0 auto;">
         <nav class="breadcrumb is-right has-bullet-separator" aria-label="breadcrumbs">
+            <button id="theme-toggle">
+                <i class="far fa-lightbulb fa-2x"></i>
+            </button>
             <ul>
                 <li>
                     <a href="https://areenaarora.com">
