--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 
 <head>
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
+    <script document.getElementById("demo").innerHTML = "modes.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="icon" href="icon.png">
     <link rel="stylesheet" href="stylesheet-light.css">
+    <!-- <link rel="stylesheet" href="stylesheet-dark.css"> -->
     <title>Home</title>
 </head>
 
-<body style='background-color: #FBFCFC; padding:40px;'>
+<body>
     <div style="width: 65%; margin: 0 auto;">
         <nav class="breadcrumb is-right has-bullet-separator" aria-label="breadcrumbs">
-            <button id="theme-toggle">
-                <i class="far fa-lightbulb fa-2x"></i>
-            </button>
             <ul>
                 <li>
                     <a href="https://areenaarora.com">
