--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
                             target="_blank"><strong>Middleton Samaritan hopes to see again</a></strong><br>
                         Human-interest story on a samaritan's fundraising efforts. <strong>November 2017</strong>
                     </div>
-                </div>
-                <br>
-                <p
-                    style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ; color:#704868; font-size: 1 em; font-weight: bolder; text-align: center;">
-                    Made with 💟 and chai
-                </p>
-    </div>
+                <!-- </div> -->
+                <!-- <br> -->
+                <!-- <p -->
+                    <!-- style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ; color:#704868; font-size: 1 em; font-weight: bolder; text-align: center;"> -->
+                    <!-- Made with 💟 and chai -->
+                <!-- </p> -->
+    <!-- </div> -->
 </body>
