--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             I'm pursuing a master's degree in <span style='color: rgb(96, 4, 142); font-weight: bold;'> Data
                 Journalism </span> at <a href='https://journalism.columbia.edu/' target='_blank'><span
                     style='font-weight:bold'>Columbia</a></span>.
-            I've worked as a publisher for <a href='https://www.reuters.com/' target='_blank'><span style='color: rgb(253, 126, 41); font-weight: bold;'> Reuters' </span></a>
+            I've worked as a publisher for <span style='color: rgb(253, 126, 41); font-weight: bold;'> Reuters' </span>
             wire service Eikon, as a senior-editor for
             <strong><span style='color: rgb(239, 60, 60); font-weight: bold;'>Glance</span></strong>, and a local
             reporter for <strong><span style='color: rgb(38, 133, 12); font-weight: bold;'>Idaho Press</strong></span>.
