--- a/biryani-project.html
+++ b/biryani-project.html
@@ -72,7 +72,8 @@
         <br><br>
 
         If you'd like to search through my dataset, here you go! I created this searchable database using <a
-            href="https://flourish.studio" target="_blank"> Flourish</a>
+            href="https://flourish.studio" target="_blank"> Flourish.</a> Please note 'Delhi' is noted here as 'NCR'.
+        You can also search for keywords in the dataset.
 
         <div class="flourish-embed" data-src="story/1126812">
             <script src="https://public.flourish.studio/resources/embed.js"></script>
