Added interactive map

--- a/biryani-project.html
+++ b/biryani-project.html
@@ -74,10 +74,16 @@
         If you'd like to search through my dataset, here you go! I created this searchable database using <a
             href="https://flourish.studio" target="_blank"> Flourish.</a> Please note 'Delhi' is noted here as 'NCR'.
         You can also search for keywords in the dataset.
-
+        <br>
         <div class="flourish-embed" data-src="story/1126812">
             <script src="https://public.flourish.studio/resources/embed.js"></script>
         </div>
-
+        <br>
+        If you'd like a map version instead, feel free to play around with this one here created using <a
+            href="'https://maptive.com/" target="_blank">Maptive</a>
+        <div style="align-items: right;">
+            <iframe src="https://fortress.maptive.com/ver4/3f2325b8c7be4be3043c8785a9887d46" frameborder="0" width="700"
+                height="500" allow="geolocation"></iframe>
+        </div>
 
 </html>
