--- a/biryani-project.html
+++ b/biryani-project.html
@@ -67,7 +67,7 @@
         I dove deep into their reviews and looks like people love them!
         <br><br>
         <div class="'box">
-            <img src="chittoda-review.png" alt="Review for Chittoda restaurant on Zomato">
+            <img src="chittoda-review.png" alt="Review for Chittoda restaurant on Zomato" sizes="20px">
         </div>
         <br><br>
 
@@ -81,6 +81,8 @@
         <br>
         If you'd like a map version instead, feel free to play around with this one here created using <a
             href="'https://maptive.com/" target="_blank">Maptive</a>
+        <br>
+        <br>
         <div style="align-items: right;">
             <iframe src="https://fortress.maptive.com/ver4/3f2325b8c7be4be3043c8785a9887d46" frameborder="0" width="700"
                 height="500" allow="geolocation"></iframe>
