--- a/biryani-project.html
+++ b/biryani-project.html
@@ -30,6 +30,7 @@
                 </li>
             </ul>
         </nav>
+        <img src="resized-biryani.jpg" alt="Homemmade Biryani" class="full-bleed-image">
         <p style="font-size: 28px; color: black; font-weight: bold; text-align: center;">
             Where's the best Biryani at?</p>
         <br>
@@ -67,7 +68,7 @@
         I dove deep into their reviews and looks like people love them!
         <br><br>
         <div class="'box">
-            <img src="chittoda-review.png" alt="Review for Chittoda restaurant on Zomato" sizes="20px">
+            <img src="chittoda-review.png" alt="Review for Chittoda restaurant on Zomato" style="max-width:800px; max-height:800px;">
         </div>
         <br><br>
 
@@ -84,8 +85,8 @@
         <br>
         <br>
         <div style="align-items: right;">
-            <iframe src="https://fortress.maptive.com/ver4/3f2325b8c7be4be3043c8785a9887d46" frameborder="0" width="700"
-                height="500" allow="geolocation"></iframe>
+            <iframe src="https://fortress.maptive.com/ver4/3f2325b8c7be4be3043c8785a9887d46" frameborder="1" max-width="700"
+                height="500" allow="geolocation align-items=center"></iframe>
         </div>
 
 </html>
