--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                 <a href='https://github.com/areenaarora/street-food-bluru' target="_blank">
                     <strong> Where's India's best and cheapest Biryani?</a></strong>
                 <br>
-                👩🏻‍💻: <a href='https://bulma.io/' target='_blank'><span class="tag is-success">Bulma</span></a> <a
-                    href='https://fontawesome.com/' target='_blank'><span class="tag is-success">Font Awesome</span></a>
-                <a href='https://freeicons.io/ target=' _blank'> <span class="tag is-success">Free Icons</span></a>
+                👩🏻‍💻: <a href='https://pandas.pydata.org/' target='_blank'><span class="tag is-success">Pandas</span></a> <a
+                    href='https://www.crummy.com/software/BeautifulSoup/bs4/doc/' target='_blank'><span class="tag is-success">Beautiful Soup</span></a>
+                <a href='https://www.selenium.dev' target='_blank'> <span class="tag is-success">Selenium</span></a>
                 <br>
                 Built a database of restaurants that deliver Biryani in six Indian cities for a quick and fun
                 analysis.<strong> February 2022</strong>
