--- a/biryani-project.html
+++ b/biryani-project.html
@@ -30,7 +30,7 @@
                 </li>
             </ul>
         </nav>
-        <img src="resized-biryani.jpg" alt="Homemmade Biryani" class="full-bleed-image">
+        <p style="font-size: 0.9rem;font-style: italic;"><img style="display: block;" src="https://live.staticflickr.com/5061/5642121703_26f96c06c2_b.jpg" alt="Chicken Biryani"><a href="https://www.flickr.com/photos/37643801@N06/5642121703">"Chicken Biryani"</a><span> by <a href="https://www.flickr.com/photos/37643801@N06">Asif A. Ali</a></span> is licensed under <a href="undefined?ref=openverse&atype=html" style="margin-right: 5px;"></a><a href="undefined?ref=openverse&atype=html" target="_blank" rel="noopener noreferrer" style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=47e18ffa-8662-44a3-baa8-c6a8a692ab4c" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-nd_icon.svg" /></a></p>
         <p style="font-size: 28px; color: black; font-weight: bold; text-align: center;">
             Where's the best Biryani at?</p>
         <br>
@@ -66,11 +66,6 @@
         was a Zomato users only opinion, but, the rating checks out from their Google rating of 4.3.
         <br><br>
         I dove deep into their reviews and looks like people love them!
-        <br><br>
-        <div class="'box">
-            <img src="chittoda-review.png" alt="Review for Chittoda restaurant on Zomato"
-                style="max-width:800px; max-height:800px;">
-        </div>
         <br><br>
 
         If you'd like to search through my dataset, here you go! I created this searchable database using <a
