--- a/biryani-project.html
+++ b/biryani-project.html
@@ -91,7 +91,7 @@
             <br> -->
         Lucknow, Hyderabad and Kolkata each have distinctive Biryani styles. Hyderabadi is a tad spicier, served with a
         side of a punchy chili sauce (Mirchi ka Salan), Lucknowi is more fragrant and milder (also my favorite!) and
-        Kolkata's is like a warm comforting hug complete with boiled eggs and potatoes! And if you're wondering how I make Biryani, here's on of my many recipes!
+        Kolkata's is like a warm comforting hug complete with boiled eggs and potatoes! And if you're wondering how I make Biryani, here's one of my many recipes!
         <br>
         <br>
         <div align="center" <blockquote class="instagram-media" data-instgrm-captioned
